--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,11 @@
 
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/secondPage.css"> 
-  <link rel="stylesheet" href="css/collection.css">
-  <link rel="stylesheet" href="css/whyGTG.css"> 
-  <link rel="stylesheet" href="css/Footer.css">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/secondPage.css"> 
+  <link rel="stylesheet" href="CSS/collection.css">
+  <link rel="stylesheet" href="CSS/whyGTG.css"> 
+  <link rel="stylesheet" href="CSS/Footer.css">
 </head>
 <body>
     <script src="index.js"></script>
